# uddcmc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  REFACTOR_PLAN.md  java_mappings.json  log.txt
.cargo/: config.toml
.github/workflows/: build.yml
agent_loader/: Cargo.toml  build.rs
agent_loader/src/: command.rs  jvm.rs  lib.rs  library.rs  logging.rs  platform.rs  server.rs
assets/docs/: scripting_engine_architecture.md
assets/scripts/: krasnostav_pingspoof.lua
assets/web_dashboard/: index.html
client/: Cargo.toml  build.rs
client/java/: DarkChannelHandler.java
client/java/stub/io/netty/channel/: ChannelDuplexHandler.java  ChannelFuture.java  ChannelHandlerContext.java  ChannelPromise.java
client/src/: client.rs  config.rs  gui.rs  hook.rs  lib.rs  state.rs
client/src/graphic/: anim.rs  color.rs  esp.rs  font.rs  gui.rs  hook.rs  hud.rs  input.rs  menu.rs  mod.rs  notification.rs  render.rs  theme.rs  ui.rs  ui_engine.rs  ui_manager.rs
client/src/graphic/platform/: linux.rs  macos.rs  mod.rs  renderer.rs  windows.rs
client/src/graphic/widget/: button.rs  hud.rs  label.rs  mod.rs  module_btn.rs  panel.rs  slider.rs  toggle.rs  window.rs
client/src/mapping/: block.rs  block_entity.rs  class.rs  class_type.rs  component.rs  inventory.rs  jvm_test.rs  loader.rs  math.rs  minecraft_version.rs  mod.rs  object.rs  reflect.rs  renames.rs
client/src/mapping/client/: camera.rs  game_renderer.rs  gamemode.rs  minecraft.rs  mod.rs  options.rs  player_info.rs  screen.rs  window.rs  world.rs
client/src/mapping/entity/: living.rs  mob.rs  mod.rs  player.rs
client/src/mapping/java/: iterable.rs  iterator.rs
client/src/module/: event_bus.rs  lua.rs  mod.rs  plugin.rs  registry.rs
client/src/module/combat/: aimbot.rs  aura.rs  criticals.rs  killaura.rs  mobaura.rs  mod.rs  rotation.rs  velocity.rs
client/src/module/misc/: antiafk.rs  mod.rs
client/src/module/movement/: fly.rs  mod.rs  nofall.rs  noslowdown.rs  speed.rs  sprint.rs
client/src/module/player/: autoarmor.rs  autototem.rs  cheststealer.rs  freecam.rs  mod.rs
client/src/module/render/: chest_esp.rs  fullbright.rs  mob_esp.rs  mod.rs  nametags.rs  player_esp.rs  tracers.rs
client/src/module/world/: mod.rs  nuker.rs  scaffold.rs
client/src/net/: mod.rs
client/src/net/packet/: clientbound_player_info_update.rs  clientbound_set_entity_motion.rs  mod.rs  move_player.rs  serverbound_move_player.rs
client/tests/java/com/darkclient/fixture/: Sample.java
client/tests/java/com/mojang/blaze3d/platform/: Window.java
client/tests/java/net/minecraft/client/: Minecraft.java
client/tests/java/net/minecraft/client/gui/screens/: Screen.java
client/tests/java/net/minecraft/client/multiplayer/: ClientLevel.java  MultiPlayerGameMode.java
client/tests/java/net/minecraft/client/player/: LocalPlayer.java
client/tests/java/net/minecraft/world/entity/player/: Abilities.java  Player.java
docs/: vendored-ilhook-fix.md
injector/: Cargo.toml
injector/src/: app.rs  inject.rs  main.rs  tui.rs
injector/src/gui/: mod.rs  theme.rs  widgets.rs
injector/src/platform/: discovery.rs  linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
mapping_derive/: Cargo.toml
mapping_derive/src/: lib.rs
protocol/: Cargo.toml
protocol/src/: command.rs  lib.rs  logging.rs
xtask/src/: main.rs
