[workspace]
resolver = "2"
members = [
    "protocol",
    "injector",
    "client",
    "agent_loader",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
egui = "0.29.0"
eframe = { version = "0.29", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }
log = "0.4.25"
simplelog = "0.12.2"
anyhow = "1.0"
thiserror = "2.0"
libc = "0.2"
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
dashmap = "6.1"
sysinfo = "0.37.2"
crossterm = "0.29"
ctor = "0.2.8"
