[package]
name = "client"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
egui.workspace = true
log.workspace = true
simplelog.workspace = true
jni.workspace = true
serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dashmap.workspace = true
libc.workspace = true
egui_glow = "0.29.0"
glow = "0.14.0"
serde_json = "1.0.135"
libloading = "0.9.0"
ilhook = "2.3.0"
lazy_static = "1.4.0"

[build-dependencies]
gl_generator = "0.14"
