[package]
name = "injector"
version.workspace = true
edition.workspace = true

[dependencies]
egui.workspace = true
eframe.workspace = true
log.workspace = true
simplelog.workspace = true
crossterm = "0.29"
sysinfo = "0.37.2"

[target.'cfg(target_os = "linux")'.dependencies]
ptrace-inject = "0.1.2"
proc-maps = "0.4.0"

[target.'cfg(windows)'.dependencies]
is_elevated = "0.1.2"
dll-syringe = "0.17.1"